abapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-iter8
  labels:
    istio-injection: enabled
