abapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config
  labels:
    group: istiodemo
    app: config
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: config
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        group: istiodemo
        app: config
        version: v1
    spec:
      containers:
      - name: config
        image: jduimovich/kdemo-config:200213131560
        resources:
          limits:
            cpu: "400m"
            memory: "256Mi"
          requests:
            cpu: "400m"
            memory: "128Mi"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demoservice
  labels:
    group: istiodemo
    app: demoservice
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: demoservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demoservice-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        group: istiodemo
        app: demoservice
        version: v1
    spec:
      containers:
      - name: demoservice
        image: jduimovich/kdemo-app:200208225457
        resources:
          limits:
            cpu: "200m"
            memory: "64Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demoservice-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        group: istiodemo
        app: demoservice
        version: v2
    spec:
      containers:
      - name: demoservice
        image: jduimovich/kdemo-app:200208225602
        resources:
          limits:
            cpu: "200m"
            memory: "64Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
        imagePullPolicy:  Always
        ports:
        - containerPort: 8080
---
