abapp/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: configservice
spec:
  hosts:
  - "config.local"
  gateways:
  - demoservice-gateway
  http:  
   - route:
     - destination:
        host: config
        port:
          number: 8080
